# hookmark

./: .gitignore  .gitlab-ci.yml  .stylish-haskell.yaml  .travis.yml  ChangeLog.md  LICENSE  Makefile  README.md  brittany.yaml  cabal.nix  cabal.project.freeze  default.nix  devel.hs  flake.nix  hookmark.cabal  hookmark.nix  package.yaml  packages.nix  shell.nix  stack-build.yaml  stack-lts-14.6.yaml  stack.yaml
app/: Main.hs
app/Options/: Types.hs
assets/: style.css
hookmark/: Main.hs  Options.hs
hookmark-web/: Main.hs  Options.hs
hookmark/Options/: Parser.hs  Types.hs
misc/: formatApply  formatCheck  haskell-fmt  haskell-lint  hlintApply  hlintCheck
misc/git/: pre-commit
regress/: Makefile  git  git.out  git_add.out  git_edit.out  git_mv.out  help.out  help_add.out  help_edit.out  help_git.out  help_mv.out  mv_missing_arg.out  mv_missing_file.out  mv_missing_folder.out  mv_missing_folder_2.out  show_all.out  show_not_found.out  show_tag_search.out  show_tag_search_haskell.out
regress/testmarks/: duckduckgo
regression/: Regression.hs  edit.in  editor.out  git  git_edit.out  git_rm.out  git_show.out  help-web.out  help.out  help_add.out  help_edit.out  help_git.out  help_mv.out  help_rm.out  help_show.out  mv_missing_arg.out  show_all.out  show_directory.out  show_haskell.out
regression/System/Directory/: Recursive.hs
regression/Test/Hspec/Expectations/: Diff.hs  Internal.hs
regression/Test/Hspec/Expectations/Process/: Typed.hs
regression/testmarks/haskell/: haskell  hoogle
src/: Git.hs  Lib.hs
src/Control/Monad/: Extra.hs
src/Data/: Path.hs
src/Debug/Trace/: Phony.hs
src/Distribution/: Git.hs
src/Hookmark/: Command.hs  IO.hs  Parser.hs  Types.hs  Web.hs
src/System/: Editor.hs
src/System/Directory/: Extra.hs
src/System/FilePath/: Extra.hs
templates/: bookmarkForm.hamlet  edit.hamlet  footer.hamlet  header.hamlet  list.hamlet  view.hamlet
test/: Spec.hs
test/Hookmark/IO/: Arbitrary.hs
test/Hookmark/Types/: Arbitrary.hs
