cabal-version:      1.12
name:               hookmark
version:            1.3
synopsis:           Browser independent bookmark manager
description:
  Please see the README on GitHub at <https://github.com/neosimsim/hookmark#readme>

category:           cli-tool
homepage:           https://gitlab.com/neosimsim/hookmark
bug-reports:        https://gitlab.com/neosimsim/hookmark/issues
author:             Alexander Ben Nasrallah
maintainer:         me@abn.sh
copyright:          2019,2020 © Alexander Ben Nasrallah
license:            BSD3
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  README.md
  ChangeLog.md
  templates/*.hamlet
  assets/*.svg
  assets/style.css

source-repository head
  type:     git
  location: https://gitlab.com/neosimsim/hookmark.git

flag static
  description: Statically link the application
  manual:      True
  default:     False

flag pedantic
  description: Build with -Wall -Werror
  manual:      True
  default:     False

library
  exposed-modules:
    Data.Path
    Distribution.Git
    Git
    Hookmark.IO
    Hookmark.Parser
    Hookmark.Types
    Hookmark.Web
    System.Editor
    System.FilePath.Extra

  other-modules:
    Control.Monad.Extra
    Debug.Trace.Phony
    Paths_hookmark
    System.Directory.Extra

  hs-source-dirs:   src

  if flag(pedantic)
    ghc-options: -Wall -Werror

  build-depends:
      base              >=4.7 && <5
    , bytestring
    , containers
    , cookie
    , directory
    , either
    , filepath
    , http-types
    , megaparsec
    , non-empty-text
    , process
    , shakespeare
    , template-haskell
    , text
    , typed-process
    , utf8-string
    , yesod
    , yesod-form
    , yesod-static

  default-language: Haskell2010

executable hookmark
  main-is:          Main.hs
  other-modules:
    Options
    Options.Parser
    Options.Types
    Paths_hookmark

  hs-source-dirs:   hookmark
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

  if flag(pedantic)
    ghc-options: -Wall -Werror

  build-depends:
      base                  >=4.7 && <5
    , bytestring
    , directory
    , filepath
    , hookmark
    , non-empty-text
    , optparse-applicative
    , raw-strings-qq
    , template-haskell
    , temporary
    , text
    , typed-process

  if flag(static)
    ld-options:  -pthread -static
    ghc-options: -static

  default-language: Haskell2010

executable hookmark-web
  main-is:          Main.hs
  other-modules:
    Options
    Paths_hookmark

  hs-source-dirs:   hookmark-web
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

  if flag(pedantic)
    ghc-options: -Wall -Werror

  build-depends:
      base                  >=4.7 && <5
    , filepath
    , hookmark
    , optparse-applicative
    , yesod

  if flag(static)
    ld-options:  -pthread -static
    ghc-options: -static

  default-language: Haskell2010

test-suite regression
  type:             exitcode-stdio-1.0
  main-is:          Regression.hs
  other-modules:
    Paths_hookmark
    System.Directory.Recursive
    Test.Hspec.Expectations.Diff
    Test.Hspec.Expectations.Internal
    Test.Hspec.Expectations.Process.Typed

  hs-source-dirs:   regression
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

  if flag(pedantic)
    ghc-options: -Wall -Werror

  build-depends:
      base                >=4.7 && <5
    , bytestring
    , Diff
    , directory
    , either
    , file-embed
    , filepath
    , hspec
    , hspec-contrib
    , hspec-expectations
    , HUnit
    , megaparsec
    , nicify-lib
    , non-empty-text
    , process
    , QuickCheck
    , template-haskell
    , text
    , typed-process
    , unix
    , unliftio
    , utf8-string

  default-language: Haskell2010

test-suite test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:
    Hookmark.IO.Arbitrary
    Hookmark.Types.Arbitrary
    Paths_hookmark
    Test.QuickCheck.Gen.Extra

  hs-source-dirs:   test
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

  if flag(pedantic)
    ghc-options: -Wall -Werror

  build-depends:
      base              >=4.7 && <5
    , bytestring
    , directory
    , either
    , filepath
    , hookmark
    , hspec
    , non-empty-text
    , process
    , QuickCheck
    , template-haskell
    , text
    , typed-process
    , unix
    , utf8-string

  default-language: Haskell2010
